@@ -99,3 +99,4 @@ Test::File = 0
 [Git::Push]         ; push repo to remote
 push_to = origin
 push_to = github
+push_to = gitlab
