@@ -2,6 +2,9 @@ Revision history for perl module Remedi
 
 {{$NEXT}}
 
+    - Allow for theses without shelf number
+    - Fix tests for changed MARC-Records from BVB
+
 0.069     2017-04-03 13:55:06+02:00 Europe/Berlin
 
 0.068     2017-03-27 08:33:26+02:00 Europe/Berlin
